--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,23 @@ version: "3.8"
 #test
 services:
   minio_db:
-    image: bitnami/minio:2025.4.22-debian-12-r1
-    container_name: museum-management-minio_db-1
+    image: docker.io/bitnami/minio:2025
+    container_name: mm_minio_db
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - '9000:9000'
+      - '9001:9001'
     environment:
       - MINIO_ROOT_USER=admin
       - MINIO_ROOT_PASSWORD=password
       - MINIO_DEFAULT_BUCKETS=object-models
     volumes:
-      - minio_data:/data
-      - minio_bitnami_data:/bitnami/minio/data
-      - minio_certs:/certs
+      - 'minio_data:/bitnami/minio/data'
     networks:
-      - museummanager-net
+      - mm-net
 
   museum_db_pg_sql:
     image: postgres:16
-    container_name: museum_db_pg_sql
+    container_name: mm_postgres_db
     ports:
       - "5433:5432"
     environment:
@@ -30,7 +28,8 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
     networks:
-      - museummanager-net
+      - mm-net
+
   ngrok:
     image: ngrok/ngrok:latest
     command:
@@ -49,6 +48,6 @@ volumes:
   pg_data:
 
 networks:
-  museummanager-net:
-    name: museum-management_museummanager-net
+  mm-net:
+    name: mm-net
     driver: bridge
