--- a/mm-backend/src/main/resources/application.properties
+++ b/mm-backend/src/main/resources/application.properties
@@ -6,10 +6,29 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.docker.compose.enabled=false
+
+security.basic.enable= false
+management.security.enabled= false
+
+server.address=127.0.0.1
+server.port=8080
+
 spring.datasource.username=museum_db_user
 spring.datasource.password=museum_db_password
 spring.datasource.platform=postgres
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#Everything related to minio, most of it is used in MinioConfig. These values are not secure, but since I take them from Docker, it's ok
+minio.url=http://localhost:9000
+minio.username=mm_minio_user
+minio.password=mm_minio_password
+minio.put-object-part-size=5242880
+#value in bytes (minimum is 5 MB equivalent)
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
