--- a/mm-backend/src/main/resources/application.properties
+++ b/mm-backend/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.docker.compose.enabled=false
 
-security.basic.enable= false
-management.security.enabled= false
+#security.basic.enable= false
+#management.security.enabled= false
 
 server.address=127.0.0.1
 server.port=8080
@@ -19,6 +19,7 @@ spring.datasource.password=museum_db_password
 spring.datasource.platform=postgres
 
 spring.jpa.hibernate.ddl-auto=create-drop
+#update
 
 #Everything related to minio, most of it is used in MinioConfig. These values are not secure, but since I take them from Docker, it's ok
 minio.url=http://localhost:9000
@@ -30,5 +31,15 @@ minio.put-object-part-size=5242880
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host=smtp.gmail.com
+#spring.mail.port=8080
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=${MAIL_FROM}
+
 
 
